--- a/static/main/css/homepage.css
+++ b/static/main/css/homepage.css
@@ -61,14 +61,23 @@ body {
 .image-screenshot {
   float: right;
   position: relative;
-  margin-right: 20vw;
-  margin-top: -20vh;
+  margin-right: 15vw;
+  margin-top: -17vh;
 }
 
 .about-section {
   margin-top: 4vh;
   max-width: 75%;
+  margin-right: 10vw;
+  margin-left: 10vw;
 }
+
+.homepage-container {
+  max-width: 100vw;
+  padding-left: 0;
+  padding-right: 0;
+}
+
 
 .about-section-header {
   text-align: center;
@@ -92,3 +101,17 @@ body {
   overflow: hidden; 
   white-space: nowrap;
 }
+
+.open-questions {
+  background: rgb(191, 126, 218)
+}
+
+.open-questions-title {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  text-align: center;
+  padding-top: 2vh;
+  color: white;
+}
+
