--- a/static/interview/creation/main.css
+++ b/static/interview/creation/main.css
@@ -1,5 +1,22 @@
+body {
+  background: rgb(141, 141, 255);
+}
+
+.page-title {
+  color: white;
+  font-size: 3em;
+}
+
+.page-description {
+  color: white;
+}
+
+label {
+  color: white;
+  text-align: center;
+}
+
 .step {
-    background-color: #e0e0e0;
     padding: .6em;
     margin-bottom: 5vh;
 }
@@ -10,15 +27,26 @@
 
 .step-description {
     text-align: center;
+    color: white;
+    padding: .6em;
+    margin-top: 2vh;
+    font-size: 1.4em;
 }
 
 .step-title {
     text-align: center;
-
+    color: white;
+    font-size: 2.3em;
 }
 
 .create-button {
     margin-bottom: 4vh;
+    font-size: 1.8em;
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+.create-button:hover {
 }
 
 input[type=checkbox]
@@ -38,7 +66,7 @@ input[type=checkbox]
     width: 60px;
     height: 34px;
   }
-  
+
   .switch input { 
     opacity: 0;
     width: 0;
@@ -112,4 +140,27 @@ input[type=checkbox]
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 1vh;
+}
+
+.checkbox-label {
+  margin-top: -2vh;
+  margin-left: 1vw;
+}
+
+hr {
+  display: block; height: 1px;
+  border: 0; border-top: 1px solid #FFF;
+  margin: 1em 0; padding: 0; 
+}
+
+.centered {
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
+}
+
+.code-label {
+  font-size: 1.6em;
 }
