--- a/static/interview/compile_run.css
+++ b/static/interview/compile_run.css
@@ -16,10 +16,6 @@ body {
     width: 100%;
 }
 
-body {
-    background-color: #7373fd;
-}
-
 .main-section {
     padding-top: 70px; 
     max-width: 90vw;
@@ -57,4 +53,26 @@ body {
 
 .output {
 
+}
+
+.go-back-button {
+    border: 2px solid white;
+    background-color: white;
+    color: white;
+    padding: 1vw 1.5vh;
+    font-size: 1.3em;
+    cursor: pointer;
+    color: white;
+    outline-color: white;
+    background: rgb(141, 141, 255);
+    margin-left: auto;
+    margin-right: auto;
+    content: block;
+    
+}
+
+.go-back-button:hover {
+    text-decoration: none;
+    background-color: white;
+    color: rgb(141, 141, 255);
 }
