--- a/static/interview/unanswered_questions.css
+++ b/static/interview/unanswered_questions.css
@@ -28,3 +28,17 @@ body {
     padding-left: 4vw;
     padding-right: 4vw;
 }
+
+.question-row-title {
+    color: white;
+    margin-right: auto;
+    margin-left: auto;
+    content: block;
+}
+
+hr {
+    display: block; height: 1px;
+    border: 0; border-top: 1px solid #FFF;
+    margin: 1em 0; padding: 0; 
+  }
+  
