--- a/static/main/css/answer.css
+++ b/static/main/css/answer.css
@@ -140,3 +140,9 @@
 	font-weight:normal;
 }
 
+.center-screen {
+    position: fixed; 
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
