--- a/static/main/css/answer.css
+++ b/static/main/css/answer.css
@@ -1,3 +1,13 @@
+body {
+    background: rgb(141, 141, 255);
+    overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 0px; 
+    background: transparent; 
+}
+
 .main_container {
     margin-top: 5vh;
 }
@@ -35,14 +45,17 @@
     padding-left: 1vw;
 }
 
-.answer-section {
-    background: #EBEBEB;
+.answer-section-one {
+
+}
+
+.answer-section-two {
 }
 
 .editor-holder {
     max-width: 100%; 
-    padding-left: 0; 
-    padding-right: 1vw;
+    margin-left: .5vw; 
+    margin-right: .5vw;
 }
 
 .submit-section {
@@ -73,6 +86,8 @@
 
 .top-row-left {
     float: left;
+    margin-left: 1vw;
+    margin-bottom: .2vh;
 }
 .top-row-left * {
     display: inline;
@@ -80,13 +95,11 @@
 
 
 .select-css {
-    margin-top: 1vh;
 	font-size: .95em;
 	font-family: sans-serif;
 	font-weight: 700;
-	color: #444;
 	line-height: 1.3;
-    padding: .6em 1.2em .5em .8em;
+    padding: .5em 1.2em .4em .8em;
 	box-sizing: border-box;
 	margin: 0;
 	border: 1px solid #aaa;
@@ -95,10 +108,9 @@
 	-moz-appearance: none;
 	-webkit-appearance: none;
 	background-color: #fff;
-	background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
-	  linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
+	background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E');
 	background-repeat: no-repeat, repeat;
-	background-position: right .7em top 50%, 0 0;
+	background-position: right .4em top 50%, 0 0;
 	background-size: .65em auto, 100%;
 }
 
@@ -145,4 +157,43 @@
     top: 50%; 
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.editor-section {
+    background-color: #DCDCDC; 
+    max-width: 100%; 
+    margin-top: 1vh;
+} 
+
+.actual-editor {
+    height: 70vh; 
+    width: 100%
+}
+
+.test-case-editor {
+    height: 20vh;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.or-upload {
+    color: white;
+}
+
+.toggle-button {
+    background: #FFF;
+    color: rgb(141, 141, 255);
+    padding-top: .27em;
+    padding-bottom: .27em;
+    margin-top: -.4vh;
+}
+
+.toggle-button:hover {
+    background: #FFF;
+    color: rgb(141, 141, 255);
+}
+
+.theme-name {
+    color: white;
 }
