--- a/static/main/css/homepage.css
+++ b/static/main/css/homepage.css
@@ -18,12 +18,17 @@ body {
   color: #7373fd;
 }
 
+.image-title, p {
+  color: #7373fd;
+  font-size: 1.3em;
+}
+
 .portfolio-item {
   margin-bottom: 30px;
 }
 
 .image-button {
-  background-color:#4acf6d;
+  background-color:#7373fd;
 	-moz-border-radius:42px;
 	-webkit-border-radius:42px;
 	border-radius:42px;
@@ -59,22 +64,30 @@ body {
   float: right;
   position: relative;
   margin-right: 13vw;
-  margin-top: -40vh;
+  margin-top: -35vh;
+}
+
+.homepage-icon {
+  color: white;
 }
 
 .about-section {
-  margin-top: 4vh;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
   max-width: 75%;
   margin-right: 10vw;
   margin-left: 10vw;
+  border: 2px solid #7373fd;
+  border-radius: 15px;
+  padding: 2vh 2vw;
 }
 
 .left-section {
-  background: rgb(125, 197, 252);
+  background: #ffffff;
 }
 
 .right-section {
-  background: #FFCC87;
+  background: #ffffff;
 }
 
 
@@ -85,19 +98,37 @@ body {
 }
 
 .offer-section {
-  background: rgb(191, 126, 218);
+  background: #d4d4ff;
+  padding-bottom: 3vh;
+  padding-top: 3vh;
+}
+
+.offer-title {
+  font-size: 1.7em;
+  color: #000;
+}
+
+.offer-description {
+  font-size: 1.2em;
+  color: #000;
+  width: 75%;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .offer-section-header {
-  color: white;
+  color: #7373fd;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  font-size: 3em;
 }
 
 .offer-item {
   text-align: center;
-  color: white;
+  color: #7373fd;
+  margin-bottom: 3vh;
 }
 
 .about-section-header {
@@ -120,7 +151,7 @@ body {
 }
 
 .open-questions {
-  background: #7373fd;
+  background: #FFF;
 }
 
 .open-questions-title {
@@ -129,7 +160,8 @@ body {
   display: block;
   text-align: center;
   padding-top: 2vh;
-  color: white;
+  color: #7373fd;
+  font-size: 3em;
 }
 
 .open-question-box {
@@ -137,8 +169,23 @@ body {
 }
 
 .open-question-card {
-  width: 18vw;
-  
+  width: 23vw;
+  border: 2px solid #7373fd;
+  border-radius: 15px;
+}
+
+.question-card-text {
+  color: #000;
+  font-size: .8em;
+}
+
+.question-btn {
+  background-color: #7373fd;
+}
+
+.question-btn:hover {
+  color: #7373fd;
+  background-color: #FFF;
 }
 
 
