--- a/static/interview/all_created_questions.css
+++ b/static/interview/all_created_questions.css
@@ -1,5 +1,5 @@
 body {
-    background: rgb(141, 141, 255);
+    background: #FFF;
 }
 
 .question-card-title {
@@ -10,6 +10,18 @@ body {
 
 .question-card-button {
     margin-left: 1.8vw;
+    color: #7373fd;
+    border: 1px solid #7373fd;
+}
+
+.question-card-button:hover {
+    margin-left: 1.8vw;
+    color: #FFF;
+    background-color: #7373fd;
+}
+
+.question-box {
+    border: 2px solid #7373fd;
 }
 
 .create-section-title {
@@ -22,6 +34,18 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    color: #7373fd;
+    border: 1px solid #7373fd;
+}
+
+.create-section-button:hover {
+    text-align: center;
+    max-width: 25%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background: #7373fd;
+    border: 1px solid #7373fd;
 }
 
 .create-section {
@@ -30,7 +54,7 @@ body {
 }
 
 .page-title {
-    color: #FFF;
+    color: #7373fd;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
