--- a/static/main/css/basic-form.css
+++ b/static/main/css/basic-form.css
@@ -25,3 +25,60 @@ label {
 }
 
 
+
+.onoffswitch {
+    position: relative; width: 15vw;
+    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+}
+.onoffswitch-checkbox {
+    display: none;
+}
+.onoffswitch-label {
+    display: block; overflow: hidden; cursor: pointer;
+    border: 2px solid #999999; border-radius: 20px;
+}
+.onoffswitch-inner {
+    display: block; width: 200%; margin-left: -100%;
+    transition: margin 0.3s ease-in 0s;
+}
+.onoffswitch-inner:before, .onoffswitch-inner:after {
+    display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
+    font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+    box-sizing: border-box;
+}
+.onoffswitch-inner:before {
+    content: "TIME LIMIT";
+    padding-left: 10px;
+    background-color: #7373fd; color: #FFFFFF;
+}
+.onoffswitch-inner:after {
+    content: "EXPIRATION DATE";
+    background-color: #EEEEEE; color: #999999;
+}
+.onoffswitch-switch {
+    display: block; width: 18px; margin: 6px;
+    background: #FFFFFF;
+    position: absolute; top: 0; bottom: 0;
+    right: 12vw;
+    border: 2px solid #999999; border-radius: 20px;
+    transition: all 0.3s ease-in 0s; 
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+    margin-left: 0;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+    right: 0px; 
+}
+
+.btn-primary {
+    color: #7373fd;
+    background-color: #FFF;
+    border: 1px solid #7373fd;
+}
+
+.btn-primary:hover {
+    color: #FFF;
+    background-color: #7373fd;
+    border: 1px solid #7373fd;
+}
+
