password confirmation and reset

--- a/static/main/css/about.css
+++ b/static/main/css/about.css
@@ -69,3 +69,10 @@ hr {
     text-align: center;
     color: #7373fd;
 }
+
+.contact-body {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    content: block;
+}
