--- a/static/interview/all_created_questions.css
+++ b/static/interview/all_created_questions.css
@@ -64,3 +64,10 @@ body {
     padding-left: 4vw;
     padding-right: 4vw;
 }
+
+.create-section-text {
+    margin-left: auto;
+    margin-right: auto;
+    content: block;
+    text-align: center;
+}
