--- a/static/main/css/about.css
+++ b/static/main/css/about.css
@@ -40,16 +40,13 @@ hr {
 
 .section-body {
     color: #7373fd;
-    font-size: 1.2em;
+    font-size: 1.3rem;
+    line-height: 1.8em;
 }
 
 .about-icon {
     margin-top: 2vh;
     margin-left: 2vw;
-}
-
-.person-block {
-
 }
 
 .person-image {
