--- a/static/main/css/homepage.css
+++ b/static/main/css/homepage.css
@@ -1,74 +1,61 @@
 body {
   padding-top: 56px;
-  overflow-x: hidden;
+  overflow-x: hidden
 }
 
 ::-webkit-scrollbar {
-  width: 0px; 
-  background: transparent; 
+  width: 0;
+  background: 0 0
 }
 
 .main-section {
   height: 65vh;
-  background-color: white;
+  background-color: #fff
 }
 
-.image-title, h1 {
+.image-title,
+h1 {
   font-size: 2em;
-  color: #7373fd;
+  color: #7373fd
 }
 
-.image-title, p {
+.image-title,
+p {
   color: #7373fd;
-  font-size: 1.3em;
-}
-
-.portfolio-item {
-  margin-bottom: 30px;
+  font-size: 1.3em
 }
 
 .image-button {
-  background-color:#7373fd;
-	-moz-border-radius:42px;
-	-webkit-border-radius:42px;
-	border-radius:42px;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:1.4em;
-	font-weight:bold;
-	padding:2.3vh 4.2vw;
-  text-decoration:none;
-  margin-top: 4vh;
-  
+  background-color: #7373fd;
+  -moz-border-radius: 42px;
+  -webkit-border-radius: 42px;
+  border-radius: 42px;
+  display: inline-block;
+  cursor: pointer;
+  color: #fff;
+  font-family: Arial;
+  font-size: 1.4em;
+  font-weight: 700;
+  padding: 2.3vh 4.2vw;
+  text-decoration: none;
+  margin-top: 4vh
 }
 
-.image-button, a:hover {
+.image-button,
+a:hover {
   text-decoration: none;
-  color: white;
+  color: #fff
 }
 
 .title-box {
-  float: left;
+  float: left
 }
 
 .image-title {
-  color: white;
+  color: #fff;
   margin-top: 5vh;
   margin-left: 8vw;
-  max-width: 30vw;
-}
-
-.image-screenshot {
-  float: right;
-  position: relative;
-  margin-right: 13vw;
-  margin-top: -35vh;
-}
-
-.homepage-icon {
-  color: #000;
+  max-width: 30vw
 }
 
 .about-section {
@@ -79,33 +66,43 @@ body {
   margin-left: 10vw;
   border: 2px solid #7373fd;
   border-radius: 15px;
-  padding: 2vh 2vw;
+  padding: 2vh 2vw
+}
+
+.offer-section-item {
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+  max-width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+  border: 2px solid #7373fd;
+  border-radius: 15px;
+  padding: 2vh 2vw
 }
 
 .left-section {
-  background: #ffffff;
+  background: #fff
 }
 
 .right-section {
-  background: #ffffff;
+  background: #fff
 }
-
 
 .homepage-container {
   max-width: 100vw;
   padding-left: 0;
-  padding-right: 0;
+  padding-right: 0
 }
 
 .offer-section {
-  background: #d4d4ff;
   padding-bottom: 3vh;
-  padding-top: 3vh;
+  padding-top: 3vh
 }
 
 .offer-title {
-  font-size: 1.7em;
+  font-size: 1.9em;
   color: #000;
+  text-decoration: underline
 }
 
 .offer-description {
@@ -114,7 +111,7 @@ body {
   width: 75%;
   text-align: center;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto
 }
 
 .offer-section-header {
@@ -122,43 +119,35 @@ body {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  font-size: 3em;
+  font-size: 3em
 }
 
 .offer-section-description {
   font-size: 1.4em;
   text-align: center;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto
 }
 
 .offer-item {
   text-align: center;
   color: #7373fd;
-  margin-bottom: 3vh;
+  margin-bottom: 3vh
 }
 
 .about-section-header {
-  text-align: center;
+  text-align: center
 }
 
 .about-section-text {
   color: #000;
   margin-bottom: 3vh;
   font-size: 1.2em;
-  margin-top: 1.5vh;
-}
-
-.footer-header-text {
-  color: #ffffff;
-}
-
-.footer-section {
-  text-align: center;
+  margin-top: 1.5vh
 }
 
 .open-questions {
-  background: #FFF;
+  background: #fff
 }
 
 .open-questions-title {
@@ -168,55 +157,53 @@ body {
   text-align: center;
   padding-top: 2vh;
   color: #7373fd;
-  font-size: 3em;
+  font-size: 3em
 }
 
 .open-question-box {
-  margin-left: 3vw;
+  margin-left: 3vw
 }
 
 .open-question-card {
   width: 23vw;
   border: 2px solid #7373fd;
-  border-radius: 15px;
+  border-radius: 15px
 }
 
 .question-card-text {
   color: #000;
-  font-size: .8em;
+  font-size: .8em
 }
 
 .question-btn {
-  background-color: #7373fd;
+  background-color: #7373fd
 }
 
 .question-btn:hover {
   color: #7373fd;
-  background-color: #FFF;
+  background-color: #fff
 }
 
 .landing-section {
   height: 100vh;
-  background-image: url("/static/images/background_tile.png");
-  background-repeat: repeat;
+  background-image: url(/static/images/background_tile.png);
+  background-repeat: repeat
 }
 
 .landing-text {
   position: absolute;
-  top: 50%; 
-  left: 50%; 
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
-  width: 70vw;
+  width: 70vw
 }
 
 .landing-title {
   font-size: 4.5em;
-  text-align: center;
+  text-align: center
 }
 
 .landing-description {
   text-align: center;
-  font-size: 2em;
+  font-size: 2em
 }
-
-
