--- a/static/main/css/basic-form.css
+++ b/static/main/css/basic-form.css
@@ -55,6 +55,7 @@ label {
     content: "EXPIRATION DATE";
     background-color: #EEEEEE; color: #999999;
 }
+
 .onoffswitch-switch {
     display: block; width: 18px; margin: 6px;
     background: #FFFFFF;
@@ -69,6 +70,56 @@ label {
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
     right: 0px; 
 }
+
+
+.preview_switch {
+    position: relative; width: 15vw;
+    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+}
+.preview_switch-checkbox {
+    display: none;
+}
+.preview_switch-label {
+    display: block; overflow: hidden; cursor: pointer;
+    border: 2px solid #999999; border-radius: 20px;
+}
+.preview_switch-inner {
+    display: block; width: 200%; margin-left: -100%;
+    transition: margin 0.3s ease-in 0s;
+}
+.preview_switch-inner:before, .preview_switch-inner:after {
+    display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
+    font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+    box-sizing: border-box;
+}
+.preview_switch-inner:before {
+    content: "CAN PREVIEW";
+    padding-left: 10px;
+    background-color: #7373fd; color: #FFFFFF;
+}
+.preview_switch-inner:after {
+    content: "CANNOT PREVIEW";
+    background-color: #EEEEEE; color: #999999;
+}
+
+.preview_switch-switch {
+    display: block; width: 18px; margin: 6px;
+    background: #FFFFFF;
+    position: absolute; top: 0; bottom: 0;
+    right: 12vw;
+    border: 2px solid #999999; border-radius: 20px;
+    transition: all 0.3s ease-in 0s; 
+}
+.preview_switch-checkbox:checked + .preview_switch-label .preview_switch-inner {
+    margin-left: 0;
+}
+.preview_switch-checkbox:checked + .preview_switch-label .preview_switch-switch {
+    right: 0px; 
+}
+
+
+
+
 
 .btn-primary {
     color: #7373fd;
