--- a/static/main/css/answer.css
+++ b/static/main/css/answer.css
@@ -300,3 +300,8 @@ width: 100%;
     margin-right: auto;
     content: block;
 }
+
+#code_saved_status {
+    color: #7373fd;
+    font-size: 1.3em;
+}
