--- a/static/main/css/basic-form.css
+++ b/static/main/css/basic-form.css
@@ -133,3 +133,8 @@ label {
     border: 1px solid #7373fd;
 }
 
+.btn-primary:active:focus {
+    color: #FFF !important;
+    background-color: #7373fd !important;
+    border: 1px solid #7373fd !important;
+}
