--- a/static/main/css/signup.css
+++ b/static/main/css/signup.css
@@ -55,3 +55,9 @@
     background-color: #7373fd;
     border: 1px solid #7373fd;
 }
+
+.btn-primary:active:focus {
+    color: #FFF !important;
+    background-color: #7373fd !important;
+    border: 1px solid #7373fd !important;
+}
