--- a/static/interview/all_created_questions.css
+++ b/static/interview/all_created_questions.css
@@ -56,13 +56,13 @@ body {
 }
 
 .create-section-button:active:focus {
-    text-align: center;
-    max-width: 35%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    background: #7373fd;
-    border: 1px solid #7373fd;
+    text-align: center !important;
+    max-width: 35% !important;
+    display: block !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    background: #7373fd !important;
+    border: 1px solid #7373fd !important;
 }
 
 .create-section {
