--- a/static/main/css/homepage.css
+++ b/static/main/css/homepage.css
@@ -214,3 +214,11 @@ a:hover {
   text-align: center;
   font-size: 2em
 }
+
+@media only screen and (max-width: 600px) {
+  .open-question-card {
+    width: 45vw;
+    border: 2px solid #7373fd;
+    border-radius: 15px
+  }
+}
