--- a/static/main/css/about.css
+++ b/static/main/css/about.css
@@ -13,7 +13,7 @@ hr {
 }
 
 .section-header {
-    color: #7373fd;
+    color: #6c5ce7;
     font-size: 3em;
     letter-spacing: .1em;
 }
@@ -22,7 +22,7 @@ hr {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    color: #7373fd;
+    color: #6c5ce7;
     font-size: 4em;
     letter-spacing: .1em;
 }
@@ -31,7 +31,7 @@ hr {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    color: #7373fd;
+    color: #000;
     font-size: 2em;
     letter-spacing: .1em;
     margin-top: 5vh;
@@ -39,7 +39,7 @@ hr {
 }
 
 .section-body {
-    color: #7373fd;
+    color: #000;
     font-size: 1.3rem;
     line-height: 1.8em;
 }
@@ -59,12 +59,12 @@ hr {
 .person-title {
     text-align: center;
     margin-top: 2vh;
-    color: #7373fd;
+    color: #000;
 }
 
 .person-text {
     text-align: center;
-    color: #7373fd;
+    color: #000;
 }
 
 .contact-body {
@@ -73,3 +73,10 @@ hr {
     text-align: center;
     content: block;
 }
+
+.centered {
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+} 
