--- a/static/interview/open.css
+++ b/static/interview/open.css
@@ -4,7 +4,7 @@
 }
 
 .page-title {
-    color: #7373fd;
+    color: #6c5ce7;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
