--- a/static/main/css/signup.css
+++ b/static/main/css/signup.css
@@ -21,7 +21,7 @@
 .onoffswitch-inner:before {
     content: "YES";
     padding-left: 10px;
-    background-color: #7373fd; color: #FFFFFF;
+    background-color: #6c5ce7; color: #FFFFFF;
 }
 .onoffswitch-inner:after {
     content: "NO";
@@ -45,24 +45,44 @@
 }
 
 .btn-primary {
-    color: #7373fd;
+    color: #6c5ce7;
     background-color: #FFF;
-    border: 1px solid #7373fd;
+    border: 1px solid #6c5ce7;
 }
 
 .btn-primary:hover {
     color: #FFF;
-    background-color: #7373fd;
-    border: 1px solid #7373fd;
+    background-color: #6c5ce7;
+    border: 1px solid #6c5ce7;
 }
 
 .btn-primary:active:focus {
     color: #FFF !important;
-    background-color: #7373fd !important;
-    border: 1px solid #7373fd !important;
+    background-color: #6c5ce7 !important;
+    border: 1px solid #6c5ce7 !important;
 }
 
 .action-link {
     font-size: 1.4em;
+    text-decoration: none;
+}
+
+.form-signin {
+    background: #a29bfe;
+    padding: 3em;
+}
+
+.page-title {
+    color: #FFF;
+    font-size: 2em;
+}
+
+.forgot-password {
+    color: #FFF;
+    font-size: 1.3em;
+} 
+
+.forgot-password:hover {
+    color: #FFF;
     text-decoration: none;
 }
