--- a/static/interview/creation/main.css
+++ b/static/interview/creation/main.css
@@ -218,3 +218,8 @@ hr {
   background-color: #6c5ce7 !important;
   color: #FFF !important;
 }
+
+.field_description {
+  font-size: .7em;
+  color: #000;
+}
