--- a/static/interview/all_created_questions.css
+++ b/static/interview/all_created_questions.css
@@ -12,8 +12,7 @@ body {
     color: #6c5ce7;
     border: 1px solid #6c5ce7;
     margin-bottom: 1vh;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 1vw;
     content: block;
 }
 
