--- a/static/main/css/homepage.css
+++ b/static/main/css/homepage.css
@@ -186,8 +186,8 @@ a:hover {
 }
 
 .question-card-text {
-  color: #000;
-  font-size: .8em
+  color: #6c5ce7;
+  font-size: 1.2em
 }
 
 .question-btn {
