--- a/static/interview/unanswered_questions.css
+++ b/static/interview/unanswered_questions.css
@@ -34,18 +34,20 @@ body {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    border: 2px solid #6c5ce7;
-    padding-top: 3vh;
-    padding-bottom: 3vh;
-    padding-left: 4vw;
-    padding-right: 4vw;
+}
+
+.page-description {
+    padding-left: 20%;
+    padding-right: 20%;
+    font-size: 1.2em;
 }
 
 .question-row-title {
-    color: #6c5ce7;
+    color: #000;
     margin-right: auto;
     margin-left: auto;
     content: block;
+    text-align: center;
 }
 
 hr {
@@ -83,4 +85,15 @@ hr {
     color: #6c5ce7 !important;
     background-color: #FFF !important;
     border: 1px solid #6c5ce7 !important;
+}
+
+.centered {
+    margin-left: auto;
+    margin-right: auto;
+    content: block;
+    text-align: center;
+}
+
+.browse-text {
+    font-size: 1.2em;
 }
