--- a/static/interview/creation/main.css
+++ b/static/interview/creation/main.css
@@ -27,12 +27,8 @@ textarea:focus {
   font-size: 3em;
 }
 
-.page-description {
-  color: #6c5ce7;
-}
-
 label {
-  color: #6c5ce7;
+  color: #000;
   text-align: center;
 }
 
@@ -47,7 +43,7 @@ label {
 
 .step-description {
     text-align: center;
-    color: #6c5ce7;
+    color: #000;
     padding: .6em;
     margin-top: 2vh;
     font-size: 1.4em;
@@ -68,7 +64,7 @@ label {
 
 .page-description {
   margin-top: 2vh;
-  color: #6c5ce7;
+  color: #000;
   font-size: 1.2em;
 }
 input[type=checkbox]
@@ -167,6 +163,11 @@ input[type=checkbox]
 .checkbox-label {
   margin-top: -2vh;
   margin-left: 1vw;
+  font-size: .9em;
+}
+
+.checkbox-label-description {
+  font-size: .8em;
 }
 
 #form_errors {
@@ -193,7 +194,7 @@ hr {
 
 .code-label {
   font-size: 1.6em;
-  color: #6c5ce7;
+  color: #000;
 }
 
 .code-editor {
@@ -220,6 +221,6 @@ hr {
 }
 
 .field_description {
-  font-size: .7em;
+  font-size: .6em;
   color: #000;
 }
