UI updates to make it more intuitive

--- a/static/main/css/answer.css
+++ b/static/main/css/answer.css
@@ -333,3 +333,9 @@ width: 100%;
 }
 
 .alert {display:inline-block;}
+
+#walk_through {
+    font-size: .7em;
+    text-decoration: underline;
+    cursor: pointer;
+}
